<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item

        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/search"
        android:title="Rechercher"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_activity_main_notification"
        android:title="Notifications"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_activity_main_help"
        android:title="Help"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_activity_main_about"
        android:title="About"
        app:showAsAction="never">
    </item>

</menu>