...
    <string name="arts">Arts</string>
    <string name="search">Search</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="noExtract">(No extract available)</string>
    <string name="set">Set</string>
    <string name="errorDate1">La date de début doit être inférieure à la date de fin</string>
    <string name="enterAtLeastOneKeyWord">Inscrire au moins un mot-clef</string>
    <string name="badFormatDate">Mauvais format de date</string>
    <string name="cat_gories">Catégories</string>
    <string name="noArticles">Aucun article n\'a été trouvé pour cette recherche</string>
    <string name="errorDate2">Les dates ne doivent pas être supérieures à la date du jour</string>
    <string name="checkAtLeastOneCategory">Cocher au moins une catégorie</string>
    <string name="noresults">Aucun résultat trouvé</string>
...
